Bug 72650 - Startup is slow due to the new startcenter if opened before a remote file
Summary: Startup is slow due to the new startcenter if opened before a remote file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta2
Hardware: Other All
: medium normal
Assignee: Jan Holesovsky
URL:
Whiteboard: target:4.3.0 target:4.2.0.1
Keywords:
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2013-12-12 21:22 UTC by Arnaud Versini
Modified: 2013-12-13 20:42 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arnaud Versini 2013-12-12 21:22:18 UTC
Hi,

If you connected to an ftp site, LO next startup is really slow.

Steps to reproduce :
- Open a file on a ftp
- Close LO
- Open LO again
- Wait :-)

Expected behavior :
- Not to wait :-)

For records: backtrace during the startup http://pastebin.com/7c0Qfbz3
Comment 1 Arnaud Versini 2013-12-12 21:29:16 UTC
@jmadero Bug reported due to the work on your ftp bug few weeks ago :-)
Comment 2 Commit Notification 2013-12-13 12:02:28 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b475a895c0b91a764d750146f9935e7c56ef7f42

fdo#72650: Get thumbnails only from the local documents.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2013-12-13 12:04:51 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a18d38c7900528082d197a93bc9517223f4c4288&h=libreoffice-4-2

fdo#72650: Get thumbnails only from the local documents.


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Arnaud Versini 2013-12-13 20:16:43 UTC
Thank you, I will test this tomorrow
Comment 5 Jan Holesovsky 2013-12-13 20:42:25 UTC
Marking fixed :-) - please reopen if still problematic.