fdo#72650: Get thumbnails only from the local documents.

No point in connecting to eg. ftp to get a thumbnail ;-)

Change-Id: I017c59196c294242366f2254eeacd9056455c1bc